--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
-    <script src="script.js" type="text/javascript"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
