HTML Metadata & Apple Touch Icon
who doesn't like metadata

--- a/index.html
+++ b/index.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>2D Platformer</title>
-    <link rel="stylesheet" href="style.css" type="text/css"/>
-    <link rel="icon" type="image/svg" href="favicon.svg"/>
+  <!-- Character set and viewport -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Description and keywords for SEO -->
+  <meta name="description" content="Blueberry Platformer: A groundbreaking 2D platformer developed by an expert team.">
+  <meta name="keywords" content="2D Platformer, game, Blueberry, platformer, Bralen Moras, Agrim Goel, Duc Ta, Tanish Hinger, Ehan Rattani">
+  
+  <!-- Multiple authors -->
+  <meta name="author" content="Bralen Moras, Agrim Goel, Duc Ta, Tanish Hinger, Ehan Rattani">
+  <meta name="robots" content="index,follow">
+  
+  <!-- Title -->
+  <title>2D Platformer</title>
+  
+  <!-- Favicon and Apple Touch Icon -->
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon/apple-touch-icon-180x180.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="apple-touch-icon/apple-touch-icon-120x120.png">
+  
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="style.css">
+  
+  <!-- Progressive Web App manifest -->
+  <link rel="manifest" href="site.webmanifest">
+  
+  <!-- Preconnect & Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="2D Platformer">
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="Experience the thrill of a top-tier 2D platformer – Blueber.">
+  <meta property="og:site_name" content="2D Platformer">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="2D Platformer">
+  <meta name="twitter:description" content="Experience the thrill of a top-tier 2D platformer – Blueberry.">
+  
+  <!-- Additional meta tags can be added here -->
 </head>
 <body>
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
-    <script type="module" type="text/javascript" src="script.js"></script>
+  <canvas id="gameCanvas" width="800" height="600"></canvas>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
