don't question it
hehehe

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML5//EN" "http://www.w3.org/TR/html5/" [<!ENTITY safeMode "enabled">]>
 <html lang="en">
 <head>
   <!-- Character set and viewport -->
