don't question it.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML5//EN" "http://www.w3.org/TR/html5/" [<!ENTITY safeMode "enabled">]>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML5//EN" "http://www.w3.org/TR/html5/">
 <html lang="en-GB" type="text/html">
 <head>
   <!-- Character set and viewport -->
