--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
   <canvas id="gameCanvas" width="800" height="600" style="background: url('sky.jpg');"></canvas>
   <script type="module" src="script.js" type="text/javascript"></script>
-  <button onClick="window.location.reload(); " style="border-radius: 5px; background-color: blue; color: white; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; margin-top: 10px; font-weight: bold; border: none; width: 100px; height: 30px; :hover{background:rgb(43, 43, 255) ;}">Restart</button>
+  <button onClick="window.location.reload(); " class="button-9" width="100">Switch Level</button>
   <noscript>
     <div class="noscript-message">
       <p>JavaScript is required to play this game. Please enable JavaScript in your browser settings, or GET A NEWER BROWSER.</p>
