--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
   <!-- Additional meta tags can be added here -->
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="600" style="background: url('sky.jpg');"></canvas>
+  <canvas id="gameCanvas" width="800" height="600" style="background: url('./Assets/sky.jpg');"></canvas>
   <script type="module" src="script.js" type="text/javascript"></script>
-  <button onClick="window.location.reload(); " class="button-9" width="100">Switch Level</button>
+  <button onClick="window.location.reload();" class="reload" width="100">Switch Level</button>
   <noscript>
     <div class="noscript-message">
       <p>JavaScript is required to play this game. Please enable JavaScript in your browser settings, or GET A NEWER BROWSER.</p>
