--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <!-- Description and keywords for SEO -->
   <meta name="description" content="Blueberry Platformer: A groundbreaking 2D platformer developed by an expert team.">
-  <meta name="keywords" content="2D Platformer, game, Blueberry, platformer, Bralen Moras, Agrim Goel, Duc Ta, Tanish Hinger, Ehan Rattani">
+  <meta name="keywords" content="2D Platformer, game, Blueberry, platformer, Bralen Moras, babafun, Agrim Goel, Duc Ta, Tanish Hinger, Ehan Rattani">
   
   <!-- Multiple authors -->
   <meta name="author" content="Bralen Moras, Agrim Goel, Duc Ta, Tanish Hinger, Ehan Rattani">
@@ -47,7 +47,7 @@
   <!-- Additional meta tags can be added here -->
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="600" style="background: url('./Assets/sky.jpg');"></canvas>
+  <canvas id="gameCanvas" width="800" height="600"></canvas>
   <script type="module" src="script.js" type="text/javascript"></script>
   <button onClick="window.location.reload();" class="reload" width="100">Switch Level</button>
   <noscript>
