--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <!-- Additional meta tags can be added here -->
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
+  <canvas id="gameCanvas" width="800" height="600" style="background-color:#ddd;"></canvas>
   <script type="module" src="script.js" type="text/javascript"></script>
   <button onClick="window.location.reload();" class="reload" width="100">Switch Level</button>
   <noscript>
